# cpp_psu

./: .gitignore  CMakeLists.txt  main.cpp  py.py
lab1/: lab1.cpp
lab2/: form.cpp  lab2.cpp  main.cpp  main.h  mean.cpp
lab3/: fill_struct.cpp  lab3.cpp  lab3.h  main.cpp  main.h  max_radius.cpp  mean_price.cpp  print_struct.cpp
lab4/: delete_book_author.cpp  fill_link_struct.cpp  main.cpp  main.h  print_all.cpp
lab5/: CMakeLists.txt  customtablemodel.cpp  customtablemodel.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.cpp  ui_mainwindow.h
lib/: lib.cpp  lib.h
projectx/: CMakeLists.txt  Vertex.cpp  Vertex.h  customlist.cpp  customlist.h  dialog.cpp  dialog.h  edgelist.cpp  edgelist.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  vertex.cpp  vertex.h  vertexgui.cpp  vertexgui.h
projectx/back/: mainwindow.cpp  mainwindow.h  vertex.cpp  vertex.h  vertexgui.cpp  vertexgui.h
term_2/lab1/: lab1.h
term_2/lab2/: form.cpp  lab2.cpp  lab2.h
term_2/lab3/: fill_struct.cpp  lab3.cpp  print_struct.cpp
term_2/lab4/: fill_link_struct.cpp  lab4.cpp  lab4.h  print_all.cpp
term_2/lab5/: CMakeLists.txt  customtablemodel.cpp  customtablemodel.h  mainwindow.h  mainwindow.ui
term_2/projectx/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
term_3/lab_1/: lab_1.cpp  lab_1.h
term_3/lab_2/: lab_2.cpp  lab_2.h  lab_funcs.cpp
term_3/lab_3/: lab_3.cpp  lab_3.h  lab_funcs.cpp
term_3/lab_4/: lab_4.cpp  lab_4.h  main_funcs.cpp
term_3/lab_5/: lab_5.cpp  lab_5.h
test/: mainwindow.cpp
